Replace ArrayList with LinkedList